Third draft. Got rid of the section on volatility

--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -174,6 +174,37 @@
   keywords = {Action Potentials,Animals,Biological Clocks,Computer Simulation,Humans,Membrane Potentials,Models; Neurological,Nerve Net,Neural Inhibition,Neurons,Nonlinear Dynamics,Synaptic Transmission}
 }
 
+@article{Afraimovich_Sequential_2013,
+  title = {Sequential Dynamics of Master\textendash Slave Systems},
+  author = {Afraimovich, Valentin and Cuevas, Dario and Young, Todd},
+  year = {2013},
+  month = jun,
+  journal = {Dynamical Systems},
+  volume = {28},
+  number = {2},
+  pages = {154--172},
+  publisher = {{Taylor \& Francis}},
+  issn = {1468-9367},
+  doi = {10.1080/14689367.2013.777398},
+  abstract = {Following on previous work, we discuss a scenario in which two neural ensembles have a master\textendash slave arrangement. We will consider a more particular case in which the master system exhibits transient dynamics due to a stable heteroclinic sequence (SHS) and the slave system has attractors in the form of limit cycles. We will give sufficient conditions that guarantee the existence of a SHS in the form of a tube in the full phase space, together with an open stable heteroclinic channel that surrounds it. We present a numerical observation of chaotic-like transient behaviour different from well-known transient chaos.},
+  keywords = {heteroclinic channel,heteroclinic sequence,neural dynamics,transient dynamics},
+  annotation = {\_eprint: https://doi.org/10.1080/14689367.2013.777398}
+}
+
+@article{Afraimovich_Sequential_2013a,
+  title = {Sequential Dynamics of Master\textendash Slave Systems},
+  author = {Afraimovich, Valentin and Cuevas, Dario and Young, Todd},
+  year = {2013},
+  month = jun,
+  journal = {Dynamical Systems},
+  volume = {28},
+  number = {2},
+  pages = {154--172},
+  issn = {1468-9367, 1468-9375},
+  doi = {10.1080/14689367.2013.777398},
+  language = {en}
+}
+
 @article{al-Nowaihi_note_2008,
   title = {A Note on the Utility Function under Prospect Theory},
   author = {{al-Nowaihi}, Ali and Bradley, Ian and Dhami, Sanjit},
@@ -3229,6 +3260,24 @@
   abstract = {A multidimensional theory of similarity in which the mental representations of stimulus objects are assumed to be drawn from multivariate normal distributions is described. A distance-based similarity function is defined and the expected value of similarity is derived. This theory is the basis for a possible explanation of paradoxical results with highly similar stimuli regarding the form of the similarity function and the distance metric. A stochastic approach to multidimensional scaling based on same-different judgments is demonstrated using artificial and real data sets. The theory of similarity presented is used as a basis for a Thurstonian extension of Shepard's model of identification performance.}
 }
 
+@article{Ernst_Humans_2002,
+  title = {Humans Integrate Visual and Haptic Information in a Statistically Optimal Fashion},
+  author = {Ernst, Marc O. and Banks, Martin S.},
+  year = {2002},
+  month = jan,
+  journal = {Nature},
+  volume = {415},
+  number = {6870},
+  pages = {429--433},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/415429a},
+  abstract = {When a person looks at an object while exploring it with their hand, vision and touch both provide information for estimating the properties of the object. Vision frequently dominates the integrated visual\textendash haptic percept, for example when judging size, shape or position1,2,3, but in some circumstances the percept is clearly affected by haptics4,5,6,7. Here we propose that a general principle, which minimizes variance in the final estimate, determines the degree to which vision or haptics dominates. This principle is realized by using maximum-likelihood estimation8,9,10,11,12,13,14,15 to combine the inputs. To investigate cue combination quantitatively, we first measured the variances associated with visual and haptic estimation of height. We then used these measurements to construct a maximum-likelihood integrator. This model behaved very similarly to humans in a visual\textendash haptic task. Thus, the nervous system seems to combine visual and haptic information in a fashion that is similar to a maximum-likelihood integrator. Visual dominance occurs when the variance associated with visual estimation is lower than that associated with haptic estimation.},
+  copyright = {2002 Macmillan Magazines Ltd.},
+  language = {en},
+  annotation = {Bandiera\_abtest: a Cg\_type: Nature Research Journals Primary\_atype: Research}
+}
+
 @article{Estes_Risks_2005,
   title = {Risks of Drawing Inferences about Cognitive Processes from Model Fits to Individual versus Average Performance},
   author = {Estes, W. K. and Maddox, W. T.},
@@ -5182,6 +5231,23 @@
   issn = {1747-0218},
   doi = {10.1080/17470210600762447},
   abstract = {Two experiments were conducted to investigate the role of phonological and executive working-memory components in the carry operation in mental arithmetic. We manipulated the number of carry operations, as previous research had done, but also the value that had to be carried. Results of these experiments show that in addition to the number of carry operations, the value of the carry is also an important variable determining the difficulty of arithmetical sums. Furthermore, both variables (number and value) interacted with each other in such a way that the combination of multiple carries and values of carries larger than one resulted in more difficult problems irrespective of the presence of a working-memory load. The findings with respect to working-memory load suggest that mainly the central executive is important in handling the number of carry operations as well as the value that has to be carried. The implications of the present findings for our views on mental arithmetic and its reliance on working memory are discussed.}
+}
+
+@article{Ingram_SingleRate_2011,
+  title = {A {{Single}}-{{Rate Context}}-{{Dependent Learning Process Underlies Rapid Adaptation}} to {{Familiar Object Dynamics}}},
+  author = {Ingram, James N. and Howard, Ian S. and Flanagan, J. Randall and Wolpert, Daniel M.},
+  year = {2011},
+  month = sep,
+  journal = {PLOS Computational Biology},
+  volume = {7},
+  number = {9},
+  pages = {e1002196},
+  publisher = {{Public Library of Science}},
+  issn = {1553-7358},
+  doi = {10.1371/journal.pcbi.1002196},
+  abstract = {Motor learning has been extensively studied using dynamic (force-field) perturbations. These induce movement errors that result in adaptive changes to the motor commands. Several state-space models have been developed to explain how trial-by-trial errors drive the progressive adaptation observed in such studies. These models have been applied to adaptation involving novel dynamics, which typically occurs over tens to hundreds of trials, and which appears to be mediated by a dual-rate adaptation process. In contrast, when manipulating objects with familiar dynamics, subjects adapt rapidly within a few trials. Here, we apply state-space models to familiar dynamics, asking whether adaptation is mediated by a single-rate or dual-rate process. Previously, we reported a task in which subjects rotate an object with known dynamics. By presenting the object at different visual orientations, adaptation was shown to be context-specific, with limited generalization to novel orientations. Here we show that a multiple-context state-space model, with a generalization function tuned to visual object orientation, can reproduce the time-course of adaptation and de-adaptation as well as the observed context-dependent behavior. In contrast to the dual-rate process associated with novel dynamics, we show that a single-rate process mediates adaptation to familiar object dynamics. The model predicts that during exposure to the object across multiple orientations, there will be a degree of independence for adaptation and de-adaptation within each context, and that the states associated with all contexts will slowly de-adapt during exposure in one particular context. We confirm these predictions in two new experiments. Results of the current study thus highlight similarities and differences in the processes engaged during exposure to novel versus familiar dynamics. In both cases, adaptation is mediated by multiple context-specific representations. In the case of familiar object dynamics, however, the representations can be engaged based on visual context, and are updated by a single-rate process.},
+  language = {en},
+  keywords = {Acceleration,Hands,Kinematics,Learning,Motor system,Musculoskeletal mechanics,Robotics,Torque}
 }
 
 @article{Inoue_Error_2016,
@@ -8878,6 +8944,22 @@
   pages = {251--268},
   issn = {0022-0396},
   doi = {10.1016/0022-0396(89)90133-2}
+}
+
+@article{Remington_dynamical_2018,
+  title = {A Dynamical Systems Perspective on Flexible Motor Timing},
+  author = {Remington, Evan D. and Egger, Seth W. and Narain, Devika and Wang, Jing and Jazayeri, Mehrdad},
+  year = {2018},
+  month = oct,
+  journal = {Trends in cognitive sciences},
+  volume = {22},
+  number = {10},
+  pages = {938--952},
+  issn = {1364-6613},
+  doi = {10.1016/j.tics.2018.07.010},
+  abstract = {A hallmark of higher brain function is the ability to rapidly and flexibly adjust behavioral responses based on internal and external cues. Here, we examine the computational principles that allow decisions and actions to unfold flexibly in time. We adopt a dynamical systems perspective and outline how temporal flexibility in such a system can be achieved through manipulations of inputs and initial conditions. We then review evidence from experiments in non-human primates that support this interpretation. Finally, we explore the broader utility and limitations of the dynamical systems perspective as a general framework for addressing open questions related to the temporal control of movements, as well as in the domains of learning and sequence generation.},
+  pmcid = {PMC6166486},
+  pmid = {30266152}
 }
 
 @article{Reynolds_Delay_2005,
