Small changes on article

--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -94,7 +94,7 @@ We now briefly describe the three components of the model separately. For clarit
 \subsubsection{Motor adaptation}
 Motor adaptation refers to the ability of humans and other animals to adapt their motor commands based on performance errors. For example, we can learn to perform a reaching movement even when underwater, where the relatively high viscosity of water means that the motor commands we have learned all our lives no longer produce the desired effect.
 
-It is widely accepted that in order to adapt motor commands to a novel environment, we create and update internal forward models of the outcomes of control signals \citep{Wolpert_Multiple_1998}. Here, we use this principle and chose to make use of an exact Bayesian learner. As has been discussed before \cite{Oh_Minimizing_2019}, a Bayesian learner has the advantage of not only fitting experimental data on motor adaptation, but also eliminating the need for explicit multiple time scales of learning as the learner can deal with adaptation after any number of trials. As we will show below this feature will be useful to explain specific key phenomena parsimoniously.
+It is widely accepted that in order to adapt motor commands to a novel environment, we create and update internal forward models of the outcomes of control signals \citep{Wolpert_Multiple_1998}. Here, we use this principle and chose to make use of an exact Bayesian learner. As has been discussed before \citep{Oh_Minimizing_2019}, a Bayesian learner has the advantage of not only fitting experimental data on motor adaptation, but also eliminating the need for explicit multiple time scales of learning as the learner can deal with adaptation after any number of trials. As we will show below this feature will be useful to explain specific key phenomena parsimoniously.
 
 To describe this component of the model, we make use of the example of reaching movements. We define a forward model as follows:
 \begin{equation}
@@ -151,7 +151,7 @@ In some experiments, adaptation blocks are repeated throughout the experiments. 
 We use the term "learned adaptation" and similar to refer to motor outputs (e.g. reaching movements) that have already been adapted by the participant to a change in the dynamics of the environment. For example, the learned adaptation during a task with a curl force refers to the movements of the participant that already counteract the force exerted by the mechanical arm.
 
 \subsection{Savings and slow/fast switching}
-The term 'savings' refer to the ability of humans and other animals to remember a previously-learned adaptation and apply it without having to re-learn it. Savings is almost universally observed in human participants \cite{Brashers-Krug_Consolidation_1996,Shadmehr_Functional_1997,Medina_Mechanism_2001,Smith_Interacting_2006,Zarahn_Explaining_2008}. In an O-A-O-A experiment, for example, savings would express themselves in the second A block in the form of a much higher adaptation rate higher than that observed during the first A block.
+The term 'savings' refer to the ability of humans and other animals to remember a previously-learned adaptation and apply it without having to re-learn it. Savings is almost universally observed in human participants \citep{Brashers-Krug_Consolidation_1996,Shadmehr_Functional_1997,Medina_Mechanism_2001,Smith_Interacting_2006,Zarahn_Explaining_2008}. In an O-A-O-A experiment, for example, savings would express themselves in the second A block in the form of a much higher adaptation rate higher than that observed during the first A block.
 
 In this section, we discuss savings, and the related phenomenon of de-adaptation, in terms of switching between forward models. This has been modeled before \citep[e.g.][]{Wolpert_Multiple_1998,Oh_Minimizing_2019,Imamizu_Explicit_2007} where we show in addition that expanding forward model switching into context inference explains facets of savings that these previous models do not.
 
@@ -159,9 +159,9 @@ To show this, we examined multiple experimental studies in which savings are obs
 
 To our knowledge, there are no experiments in which no contextual information is available. However, many experiments \citep[e.g.][]{Huang_Persistence_2009,Brennan_Decay_2015,Smith_Interacting_2006} contain blocks of error-clamp trials in which participants are not provided with contextual information. These blocks could be considered uncued, however, as we discuss in the following sections, contextual information is nevertheless available to participants. In this section, we focus on cued and partially-cued experiments and leave error-clamp trials to the following sections.
 
-Because context inference integrates information from different sources, many experiments in which no intentional, overt contextual cues are available indeed contain contextual information that the participant can use to infer the context. For example, in curl-force-field experiments with mechanical arms, the force feedback provided by the mechanical arm always gives participants a sense for the current context, although error-clamp trials are difficult to distinguish from adaptation trials based on force feedback alone. In fact, the mere act of holding the handle informs participants that something is different from baseline. Proprioceptive signals can also provide contextual information \cite{Dizio_Motor_1995,Shadmehr_Adaptive_1994}. The sudden appearance of motor errors can itself be a cue for contextual change, as long as the motor error is perceivably higher than the expected trial-by-trial variation in performance, and even an unusually long pause between two trials could indicate to participants that a new block with a potentially different context could have started \cite{Ethier_Spontaneous_2008}.
+Because context inference integrates information from different sources, many experiments in which no intentional, overt contextual cues are available indeed contain contextual information that the participant can use to infer the context. For example, in curl-force-field experiments with mechanical arms, the force feedback provided by the mechanical arm always gives participants a sense for the current context, although error-clamp trials are difficult to distinguish from adaptation trials based on force feedback alone. In fact, the mere act of holding the handle informs participants that something is different from baseline. Proprioceptive signals can also provide contextual information \citep{Dizio_Motor_1995,Shadmehr_Adaptive_1994}. The sudden appearance of motor errors can itself be a cue for contextual change, as long as the motor error is perceivably higher than the expected trial-by-trial variation in performance, and even an unusually long pause between two trials could indicate to participants that a new block with a potentially different context could have started \citep{Ethier_Spontaneous_2008}.
 
-To show how adaptation changes depending on the amount of contextual information, we selected three representative experiments from two studies \cite{Kim_Neural_2015,Oh_Minimizing_2019} which differ in the amount of contextual information. \cite{Kim_Neural_2015} performed a cued-context visuomotor rotation experiment with three contexts with different rotation: no rotation, 40 degrees and -40 degrees. Participants performed shooting movements in blocks of trials with the same rotation. Importantly, the identity of the current context was displayed as a visual cue (colored light), making this a cued-context experiment. Consistent with our model, the authors found that switching was immediate and accurate. In \fref{fig:oh-2019}A we show the results of simulations with our model using the parameters of the task, as well as the experimental results from \cite{Kim_Neural_2015}. The correspondence between simulations and experimental results can be seen in the switches between contexts, i.e. when the solid black line (representing the true context) switches between 40, 0 and -40; in both panels (left and right), the blue line, representing the agent's adaptation, quickly follows the switches.
+To show how adaptation changes depending on the amount of contextual information, we selected three representative experiments from two studies \citep{Kim_Neural_2015,Oh_Minimizing_2019} which differ in the amount of contextual information. \cite{Kim_Neural_2015} performed a cued-context visuomotor rotation experiment with three contexts with different rotation: no rotation, 40 degrees and -40 degrees. Participants performed shooting movements in blocks of trials with the same rotation. Importantly, the identity of the current context was displayed as a visual cue (colored light), making this a cued-context experiment. Consistent with our model, the authors found that switching was immediate and accurate. In \fref{fig:oh-2019}A we show the results of simulations with our model using the parameters of the task, as well as the experimental results by \cite{Kim_Neural_2015}. The correspondence between simulations and experimental results can be seen in the switches between contexts, i.e. when the solid black line (representing the true context) switches between 40, 0 and -40; in both panels (left and right), the blue line, representing the agent's adaptation, quickly follows the switches.
 
 \begin{figure}
 \centering
