Finalized. Submitted to Nat.Comm.

--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -12,7 +12,6 @@
 % \usepackage[nomarkers,figuresonly]{endfloat}
 
 % Remember to start reftex-mode
-\bibliographystyle{ieeetr}
 
 \setlength{\parskip}{1em}
 \def \fref #1{Figure \ref{#1}}     % Reference figures
@@ -28,10 +27,12 @@
 
 \title{The effects of ongoing context inference on motor learning}
 \shorttitle{Context-inference-dependent motor learning}
-\author[1,2]{Cuevas Rivera, Darío}
-\author[1,2]{Kiebel, Stefan J.}
-\affil[1]{Chair of Neuroimaging, Faculty of Psychology, Technische Universität Dresden, 01062 Dresden, Germany.}
-\affil[2]{Centre for Tactile Internet with Human-in-the-Loop (CeTI)}
+% \author[1,2]{Cuevas Rivera, Darío}
+% \author[1,2]{Kiebel, Stefan J.}
+% \affil[1]{Chair of Neuroimaging, Faculty of Psychology, Technische Universität Dresden, 01062 Dresden, Germany.}
+% \affil[2]{Centre for Tactile Internet with Human-in-the-Loop (CeTI)}
+\author[1]{Author list}
+\affil[1]{Affiliation list}
 \affiliation{~}
 
 \begin{document}
@@ -438,10 +439,10 @@ arm experiments, around 0.0125), and the hyperparameters of the standard
 deviation are stable during the experiment.
 
 
-\section{Acknowledgment}
-Funded by the German Research Foundation (DFG, Deutsche Forschungsgemeinschaft) as part of Germany’s Excellence Strategy – EXC 2050/1 – Project ID 390696704 – Cluster of Excellence “Centre for Tactile Internet with Human-in-the-Loop” (CeTI) of Technische Universität Dresden.
+% \section{Acknowledgment}
+% Funded by the German Research Foundation (DFG, Deutsche Forschungsgemeinschaft) as part of Germany’s Excellence Strategy – EXC 2050/1 – Project ID 390696704 – Cluster of Excellence “Centre for Tactile Internet with Human-in-the-Loop” (CeTI) of Technische Universität Dresden.
 
-\bibliography{MyLibrary}
+\bibliography{../../MyLibrary}
 
 
 
